# is-cpp-old

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  Vagrantfile
example/: Makefile  image_viewer.cpp  record  webcam.cpp
example/control_robot/: Makefile  control_robot.cpp
example/final_position_controller/: Makefile  final_position_controller.cpp
example/find_pattern/: Makefile  find_pattern.cpp  find_pattern.hpp
example/frame_change/: Makefile  frame_change.cpp
example/image_viewer/: Makefile  image_viewer.cpp
example/odometry_viewer/: Makefile  odometry_viewer  odometry_viewer.cpp
example/pattern_viewer/: Makefile  pattern_viewer.cpp
example/pioneer/: Makefile  pioneer  pioneer.cpp
example/ptgrey/: Makefile  camera-ptgrey  camera-ptgrey.cpp  ptgrey  ptgrey.cpp
example/robot_teleoperation/: Makefile  robot_teleoperation.cpp
example/save_images/: save_images.cpp
example/sync/: Makefile  sync.cpp  sync.hpp  sync_service_utils.hpp
example/sync_request/: Makefile  sync_request.cpp
example/ts_robot_viewer/: Makefile  ts_robot_viewer  ts_robot_viewer.cpp
example/ts_viewer/: ts_viewer  ts_viewer.cpp
example/visual_control/: Makefile  visual_control.cpp
example/webcam/: Makefile  webcam.cpp
examples/webcam/: CMakeLists.txt  webcam.cpp
include/: connection.hpp  data-publisher.hpp  event-watcher.hpp  helpers.hpp  is.hpp  logger.hpp  packer.hpp  service-client.hpp  service-provider.hpp  theora-decoder.hpp  theora-encoder.hpp  timer.hpp
include/drivers/: pioneer.hpp  ptgrey.hpp  webcam.hpp
include/gateways/: camera.hpp  robot.hpp
include/msgs/: camera.hpp  common.hpp  cv.hpp  geometry.hpp  robot.hpp
scripts/: install  install_boost  is  lddcp
scripts/templates/: Makefile  app.cpp
src/: connection.cpp  service-client.cpp  service-provider.cpp
src/is/: connection.hpp  helpers.hpp  is.hpp  logger.hpp  msgs.hpp  packer.hpp  service-client.hpp  service-provider.hpp
src/is/msgs/: camera.hpp  common.hpp  geometry.hpp  robot.hpp
src/is/theora/: ogg-decoder.hpp  ogg-encoder.hpp
src/theora/: ogg-decoder.cpp  ogg-encoder.cpp
tests/: Makefile  cam-pub.cpp  cam-sub.cpp  service.cpp
